src/Javafe/trunk/Javafe/test/javafe/test/fe/test111/Access2.java
class U {
    Object x = new a.T();       // error

    Object y = new a.T() {} ;   // legal since comes from a subclass...
}
